--- a/Web/CSS/test.css
+++ b/Web/CSS/test.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 
-nav {
-  margin: 30px;
-  background: #ff0000;
+.navigation {
+  margin: 80px;
+  background-color: #ff0000;
 }
 /*# sourceMappingURL=test.css.map */
