--- a/Web/CSS/test.scss
+++ b/Web/CSS/test.scss
@@ -5,7 +5,7 @@
 
 $color-primary: #ff0000;
 
-nav{
-    margin: 30px;
-    background: $color-primary;
+.navigation{
+    margin: 80px;
+    background-color: $color-primary;
 }
