--- a/Web/CSS/test.css
+++ b/Web/CSS/test.css
@@ -3,8 +3,32 @@
   padding: 0;
 }
 
-.navigation {
+nav {
   margin: 80px;
   background-color: #ff0000;
+}
+
+.navigation {
+  list-style: none;
+  float: left;
+}
+
+.navigation li {
+  display: inline-block;
+  margin-left: 30px;
+}
+
+.navigation li:first-child {
+  margin: 0;
+}
+
+.navigation li a:link {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: green;
+}
+
+.button {
+  float: right;
 }
 /*# sourceMappingURL=test.css.map */
