--- a/Web/CSS/test.css
+++ b/Web/CSS/test.css
@@ -44,9 +44,10 @@ nav::after {
   display: inline-block;
   text-align: center;
   border-radius: 100px;
+  width: 150px;
   text-decoration: none;
   text-transform: uppercase;
-  width: 150px;
+  color: #e7d4d4;
 }
 
 .btn-main:link {
