--- a/Web/CSS/FLex.css
+++ b/Web/CSS/FLex.css
@@ -1,38 +1,39 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.container{
-    background: #ccc;
-    padding: 10px;
-    /* height: 1500px; */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.container {
+	background: #ccc;
+	/* padding: 10px; */
+	/* height: 1500px; */
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
 }
-.item{
-    background: #f1425d;
-    padding: 30px;
-    margin: 30px;
-    color: #fff;
-    font-size: 40px;
-    /* flex-grow: 1; */
+.item {
+	background: #f1425d;
+	padding: 30px;
+	margin: 30px;
+	color: #fff;
+	font-size: 40px;
+	/* flex-grow: 1; */
 }
-
+/* 
 .i2{
     height: 200px;
     order: 1;
-    /* flex: 0 1 ; */
-    /* flex-shrink: 0; */
+    flex: 0 1 ;
+    flex-shrink: 0;
     
 }
 
 .i4{
-    /* font-size: 60px; */
+    font-size: 60px;
     align-self: flex-end;
     order: -1;
     flex: 0 1 300px;
-    }
+    } 
+ */
